<resources>
    <string name="app_name">MeTask</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Doe</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_date">432</string>

    <string name="menu_home"><font fgcolor="#FFFFFFFF">S2dioapps</font></string>

    <string name="menu_task_today"><font fgcolor="#FFFFFFFF">Task Today</font></string>
    <string name="menu_settings"><font fgcolor="#FFFFFFFF">Settings</font></string>

    <string name="com_auth0_client_id">jQY5DDjCDoRL3d03VaJK03Y7R4wZlbca</string>
    <string name="com_auth0_domain">dev-eb4zk63w.us.auth0.com</string>
    <string name="com_auth0_scheme">demo</string>

    <!--SplashActivity-->
    <string name="splash_screen_title">MeTask</string>

    <!--RegisterActivity-->
    <string name="register_an_account">Register an account</string>
    <string name="hello_there">Hello there!</string>
    <string name="please_enter_your_full_name">Please enter your full name.</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="what_should_we_call_you">What should we call you?</string>
    <string name="for_example">for example, when we send you mail?</string>
    <string name="back">Back</string>
    <string name="create_an_account">"Create a MeTask account</string>
    <string name="please_enter_your_email">Please enter your email address.</string>
    <string name="email_in_use">Email already in used by another account.</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="setup_password">Setup your password</string>
    <string name="error">Error</string>
    <string name="password_must">Password must:</string>
    <string name="password_must_have">-contain at least eight characters long \n-contain an uppercase and lowercase character \n-contain a number</string>
    <string name="by_using_metask">By using MeTask you agree to <u>Terms &amp; Service and Privacy Policy.</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="get_started_signIn">Let\'s get started</string>
    <string name="get_started_description">Lorem ipsum dolor sit amet, conseteur sadipscing elitr, sed diam nonumuy eirmod tempor</string>

</resources>