<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.s2dioapps.metask.ui.component.home.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.s2dioapps.metask.ui.component.tasktoday.view.TaskTodayFragment"
        android:label="@string/menu_task_today"
        tools:layout="@layout/fragment_task_today" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.s2dioapps.metask.ui.component.setting.view.SettingFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>