<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mariner"
    tools:context=".ui.component.register.view.PasswordFragment">

   <!-- <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ra_margin6"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/ra_text_size4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include layout="@layout/progress_bar"/> -->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ra_margin3"
        android:layout_marginTop="@dimen/ra_margin8"
        android:layout_marginEnd="@dimen/ra_margin3"
        app:cardBackgroundColor="@color/faux_alice_blue"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_setup_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ra_margin3"
                android:layout_marginTop="@dimen/ra_margin3"
                android:fontFamily="@font/open_sans"
                android:text="@string/setup_password"
                android:textColor="@color/matterhorn"
                android:textSize="@dimen/ra_text_size2"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ra_margin3"
            android:layout_marginTop="@dimen/ra_margin2"
            android:layout_marginEnd="@dimen/ra_margin3"
            android:background="@drawable/rounded_edit_text"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_setup_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:fontFamily="@font/open_sans"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColor="@color/matterhorn"
                android:textSize="@dimen/ra_text_size2"
                android:background="@drawable/rounded_edit_text"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_error_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ra_margin3"
                android:layout_marginTop="@dimen/ra_margin"
                android:fontFamily="@font/open_sans"
                android:text="@string/error"
                android:textColor="@color/rosebud"
                android:textSize="@dimen/ra_text_size"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_password" />

            <TextView
                android:id="@+id/tv_password_must"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ra_margin3"
                android:layout_marginTop="@dimen/ra_margin"
                android:fontFamily="@font/open_sans"
                android:text="@string/password_must"
                android:textColor="@color/matterhorn"
                android:textSize="@dimen/ra_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_error_email"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tv_password_must_have"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ra_margin3"
                android:fontFamily="@font/open_sans"
                android:text="@string/password_must_have"
                android:textColor="@color/matterhorn"
                android:textSize="@dimen/ra_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_password_must"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_confirm_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ra_margin3"
                android:layout_marginTop="@dimen/ra_margin"
                android:layout_marginEnd="@dimen/ra_margin3"
                android:background="@drawable/rounded_edit_text"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_password_must_have">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:fontFamily="@font/open_sans"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"
                    android:textColor="@color/matterhorn"
                    android:textSize="@dimen/ra_text_size2"
                    android:background="@drawable/rounded_edit_text"
                    tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_by_using_metask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ra_margin3"
                android:layout_marginTop="@dimen/ra_margin2"
                android:layout_marginEnd="@dimen/ra_margin4"
                android:fontFamily="@font/open_sans"
                android:text="@string/by_using_metask"
                android:textColor="@color/matterhorn"
                android:textSize="@dimen/ra_text_size"
                app:layout_constraintEnd_toEndOf="@id/til_confirm_password"
                app:layout_constraintStart_toStartOf="@+id/til_confirm_password"
                app:layout_constraintTop_toBottomOf="@id/til_confirm_password"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ra_margin3"
                app:drawableLeftCompat="@drawable/mdi___arrow_left"
                android:foreground="?attr/selectableItemBackground"
                android:drawablePadding="@dimen/ra_padding"
                android:fontFamily="@font/open_sans"
                android:gravity="center"
                android:text="@string/back"
                android:textSize="@dimen/ra_text_size2"
                android:textColor="@color/matterhorn"
                app:layout_constraintBottom_toBottomOf="@+id/button_submit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_submit" />

            <Button
                android:id="@+id/button_submit"
                android:layout_width="@dimen/ra_button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ra_margin2"
                android:layout_marginBottom="@dimen/ra_margin3"
                android:backgroundTint="@color/dodger_blue"
                android:fontFamily="@font/open_sans"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/ra_text_size"
                app:cornerRadius="@dimen/ra_card_corner"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/til_confirm_password"
                app:layout_constraintTop_toBottomOf="@+id/tv_by_using_metask"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>