<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mariner"
    tools:context=".ui.component.register.view.FullNameFragment">

   <!-- <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ra_margin6"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/ra_text_size4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

   <include layout="@layout/progress_bar"/> -->


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ra_margin3"
        android:layout_marginTop="@dimen/ra_margin8"
        android:layout_marginEnd="@dimen/ra_margin3"
        app:cardBackgroundColor="@color/faux_alice_blue"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_register_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ra_margin3"
                android:layout_marginTop="@dimen/ra_margin3"
                android:fontFamily="@font/open_sans"
                android:text="@string/register_an_account"
                android:textColor="@color/dodger_blue"
                android:textSize="@dimen/ra_text_size2"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tv_hello_there"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ra_margin3"
                android:layout_marginTop="@dimen/ra_margin3"
                android:fontFamily="@font/open_sans"
                android:text="@string/hello_there"
                android:textColor="@color/matterhorn"
                android:textSize="@dimen/ra_text_size2"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_register_an_account" />

            <TextView
                android:id="@+id/tv_please_enter_your_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ra_margin3"
                android:layout_marginTop="@dimen/ra_margin"
                android:fontFamily="@font/open_sans"
                android:text="@string/please_enter_your_full_name"
                android:textColor="@color/matterhorn"
                android:textSize="@dimen/ra_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_hello_there" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_full_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ra_margin3"
                android:layout_marginTop="@dimen/ra_margin2"
                android:layout_marginEnd="@dimen/ra_margin3"
                android:background="@drawable/rounded_edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_please_enter_your_full_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:fontFamily="@font/open_sans"
                    android:textColor="@color/matterhorn"
                    android:textSize="@dimen/ra_text_size2"
                    android:background="@drawable/rounded_edit_text"
                    tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ra_margin3"
                app:drawableLeftCompat="@drawable/mdi___cancel"
                android:foreground="?attr/selectableItemBackground"
                android:drawablePadding="@dimen/ra_padding"
                android:fontFamily="@font/open_sans"
                android:gravity="center"
                android:text="@string/cancel"
                android:textSize="@dimen/ra_text_size2"
                android:textColor="@color/matterhorn"
                app:layout_constraintBottom_toBottomOf="@+id/button_next"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_next" />

            <Button
                android:id="@+id/button_next"
                android:layout_width="@dimen/ra_button_width"
                android:layout_height="@dimen/ra_button_height"
                android:layout_marginTop="@dimen/ra_margin4"
                android:layout_marginBottom="@dimen/ra_margin3"
                android:backgroundTint="@color/dodger_blue"
                android:fontFamily="@font/open_sans"
                android:text="@string/next"
                android:enabled="false"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/ra_text_size"
                app:cornerRadius="@dimen/ra_card_corner"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/til_full_name"
                app:layout_constraintTop_toBottomOf="@+id/til_full_name"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
<!--
    <TextView
        android:id="@+id/tv_already_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:text="@string/already_have_an_account"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/ra_text_size2"
        app:layout_constraintBottom_toBottomOf="@+id/tv_sign_in"
        app:layout_constraintEnd_toStartOf="@+id/tv_sign_in"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_sign_in"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ra_margin6"
        android:fontFamily="@font/open_sans"
        android:padding="@dimen/ra_padding"
        android:text="@string/sign_in"
        android:textColor="@color/aquamarine"
        android:textSize="@dimen/ra_text_size3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_already_have_an_account"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" /> -->


</androidx.constraintlayout.widget.ConstraintLayout>